ghost/ghostapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: ghost
  name: ghost
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ghost
    spec:
      containers:
      - image: ghost:5.45.1-alpine
        name: ghost
        ports:
        - containerPort: 2368
          protocol: TCP
        volumeMounts:
        - mountPath: /var/lib/ghost/content
          name: content
        resources: {}
      volumes:
      - name: content
        persistentVolumeClaim:
          claimName: ghost-app
status: {}
