ghost/mariadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: mariadb
  name: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: mariadb
    spec:
      containers:
      - env:
        - name: MARIADB_ROOT_PASSWORD
          value: soeid1
        - name: MARIADB_DATABASE
          value: ghost
        image: mariadb:10.7.8
        name: mariadb
        ports:
        - containerPort: 3306
          protocol: TCP
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: mariadb-pv
      volumes:
      - name: mariadb-pv
        persistentVolumeClaim:
          claimName: db
