ghost/ghostapp-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ghost
    argocd.argoproj.io/instance: ghost
  name: ghost
spec:
  ports:
  - port: 2368
    protocol: TCP
    targetPort: 2368
  selector:
    app: ghost
  type: NodePort
status:
  loadBalancer: {}
